--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
