--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-scripts": "3.4.3",
     "react-scroll-to-bottom": "^4.0.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "simple-peer": "^9.7.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
