--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "emotion": "^10.0.27",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
